# predicting_well_being

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: cfg_analysis.yaml  cfg_postprocessing.yaml  cfg_preprocessing.yaml  config_fix.yaml  config_postprocessing.yaml  config_var.yaml  name_mapping.yaml
src/: main.py  slurm_script.sh  ss_cluster1.sh  ss_cluster2.sh  ss_palma.sh  ss_pc2.sh
src/analysis/: AdaptiveImputerEstimator.py  BaseMLAnalyzer.py  CustomIterativeImputer.py  CustomScaler.py  ENRAnalyzer.py  Imputer.py  NonLinearImputer.py  PearsonFeaureSelector.py  RFRAnalyzer.py  SafeLogisticRegression.py  ShuffledGroupKFold.py
src/deprecated/: BayesianLogisticRegression.py  DatasetCreator.py  prelimpreprocessor.py  pytest_test.py  shap_values.pkl  shapiq_test.py
src/deprecated/state_wb/pl/all/elasticnet/: cv_results.json  lin_model_coefficients.json
src/postprocessing/: CVResultProcessor.py  DescriptiveStatistics.py  LinearRegressor.py  Postprocessor.py  ResultPlotter.py  ResultTableCreator.py  ShapProcessor.py  SignificanceTesting.py  SuppFileCreator.py
src/preprocessing/: BasePreprocessor.py  CocoesmPreprocessor.py  CocomsPreprocessor.py  CocoutPreprocessor.py  EmotionsPreprocessor.py  PiaPreprocessor.py  ZpidPreprocessor.py
src/utils/: ClusterSummarizer.py  ConfigParser.py  DataLoader.py  DataSaver.py  DataSelector.py  Logger.py  SanityChecker.py  SlurmHandler.py  Timer.py  configparser.py  coreusagemonitor.py  dataloader.py  logger.py  sanitychecker.py  slurmhandler.py  timer.py  utilfuncs.py
